--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "YOURNAME Data Analysis Portfolio"
+  title: "Saraa Al Jawad Data Analysis Portfolio"
   navbar:
     left:
       - text: "About Me"
